ui/apps/io.ox/mail/style.less
/* ... */
.mail-reader {
    background-color: #eee;
    .overflow();
    .thread-view-control {
        max-width: 900px;
        margin: 0 auto;
    }
    .thread-view-control, .thread-view-list {
        position: static;
    }
}

/* ListView */

.mail-item {

    .contact-picture {
        float: left;
        margin: 0px 14px 0 0;
        .picture(40px, 40px);
        html.high-contrast & {
            display: none;
        }
    }

    .selected .contact-picture {
        opacity: 0.25;
        -webkit-filter: saturate(0);
    }

    .from {
        .ellipsis();
        span.person {
            color: inherit;
            .fontWeight(500);
        }
    }

    .unread .from span.person { font-weight: bold; }

    .date, .size {
        .fontWeight(300);
        display: inline-block;
        margin-left: 0.5em;
        float: right;
    }

    .date {

        opacity: 0.50;

        html.high-contrast & {
            opacity: 1;
        }

    }

    .size {
        color: @link-color;
    }

    .actions {
        margin-left: 14px;

    }

    .list-item-content {

        .fontWeight(300);
        line-height: 20px; // need that to avoid flicker base on icon height
        .ellipsis();

        i {
            font-size: 14px;
            display: inline-block;
            float: left;
            line-height: 20px;
            margin-right: 7px;
        }

        i.icon-unread { color: @link-color; }
        i.icon-answered { color: #aaa; }
        i.icon-forwarded { color: #888; }
    }

    &.visible-selection.has-focus .list-item.selected i {
        color: rgba(255, 255, 255, 0.50);
    }

    .fa-paperclip.has-attachments {
        font-size: @icon-size;
        width: 18px;
        height: 18px;
        margin-left: 7px;
        float: right;
    }

    .flag {
        font-size: 18px;
        padding: 0;
        margin-left: 7px;
        float: right;
    }

    .priority {
        float: right;
        .high { color: @mail-priority; }
        .low { color: @mail-priority-low; }
    }

    .list-item.deleted {
        text-decoration: line-through;
        color: rgba(0, 0, 0, 0.20);
    }

    &.visible-selection.has-focus .list-item.deleted.selected {
        color: rgba(255, 255, 255, 0.50);
    }

    .box() {
        color: #888;
        padding: 0 7px;
        margin-left: 7px;
        display: inline-block;
        float: right;
        overflow: visible;
        text-align: center;
        border: 1px solid rgba(0, 0, 0, 0.10);
        .fontWeight(normal);
        .border-radius(3px);
    }

    .account-name {
        .box();
    }

    .thread-size {
        .box();
        min-width: 2em;
        html.high-contrast & {
            color: @hc-gray; //HC
        }
    }

    &.visible-selection.has-focus .selected {
        .thread-size, .account-name { color: #fff; }
    }

    .thread-item {

        padding: 5px @list-view-padding 5px (@list-view-padding + 30px);

        .from span.person {
            .fontWeight(normal);
        }

        i.icon-unread {
            color: @link-color;
            position: absolute;
            line-height: 20px;
            left: @list-view-padding;
        }
    }

    .thread-item:first-child { padding-top: 7px; }
    .thread-item:last-child { padding-bottom: 7px; }

    a.n-more {
        .fontWeight(300);
    }

    .attachments {
        padding: 19px 20px 19px 20px;
        border-top: 1px solid #eee;
        border-bottom: 1px solid #eee;
    }

    .attachment-list {

        b { opacity: 0.30; }
        .dropdown {
            margin-right: 1em;
        }
        .fa-paperclip {
            font-size: 16px;
            color: @link-color;
        }
        .io-ox-inline-links {
            display: inline;
            font-family: @normal-font-family;
            font-size: 13px;
            li { margin-right: 14px; }
        }
    }

    .attachment-preview {

        margin: 14px 0 0 0;
        padding: 0;
        list-style: none;
        white-space: nowrap;
        height: 120px;
        overflow-y: hidden;
        overflow-x: auto;

        li {
            margin: 0 1px 0 0;
            padding: 0;
            width: 120px;
            height: 120px;
            background-size: cover;
            display: inline-block;
            cursor: pointer;
        }

        li:hover {
            opacity: 0.50;
        }
    }

    .unread-toggle {
        position: absolute;
        left: 60px;
        width: @unread-toggle-width;
        height: 40px;
        text-align: center;
        font-size: 14px;
        color: #ccc;
        &:hover { text-decoration: none; color: #aaa; }
        i.fa:before { content: "\f003"; /* fa-envelope-o */ }
    }

    &.no-padding .unread-toggle { left: 40px; }

    &.unread .unread-toggle {
        color: #08c;
        i.fa:before { content: "\f0e0"; /* fa-envelope */ }
    }

    .flag-picker {
        float: right;
        display: inline-block;
        margin-left: 7px;
        position: relative;
        .dropdown-toggle {
            font-size: @icon-size;
            &:hover { text-decoration: none; }
        }
        .flag-dropdown-icon.flag_0 {
            color: #ccc;
        }
    }
}

.flag-picker .dropdown-menu {
    right: 0;
    left: auto;
    width: 200px;
    a {
        line-height: 24px;
        .ellipsis();
    }
}

.mail-detail .flag-picker .dropdown-menu {
    font: 14px/20 @normal-font-family;
    top: 110%;
}

.flag-dropdown {

    font-size: 22px;
    margin: 7px 0 0 14px;
    cursor: pointer;
    float: right;

    ul {
        font: 14px/20 @normal-font-family;
        right: -20px;
        left: auto;
        top: 120%;
        width: 200px;
    }

    a {
        line-height: 24px;
        text-decoration: none;
    }

    .flag-dropdown-icon.flag_0 {
        color: #ddd;
    }

    .flag-dropdown-icon.flag_0:hover {
        color: #aaa;
    }
}
/* ... */

